# euler

./: .gitignore  CLAUDE.md  README.md
cpp/: .gitignore  CMakeLists.txt  README.md  agents.md  learnings.md  problem.md  problem1-functional.cpp  problem1-lambda.cpp  problem1-lambda.md  problem1.cpp  problem10.cpp  problem11.cpp  problem12.cpp  problem13.cpp  problem14.cpp  problem15.cpp  problem16.cpp  problem17.cpp  problem18.cpp  problem19.cpp  problem2.cpp  problem20.cpp  problem21.cpp  problem22-lambda.cpp  problem22-lambda.md  problem22.cpp  problem23.cpp  problem24.cpp  problem3.cpp  problem4.cpp  problem5.cpp  problem6.cpp  problem7.cpp  problem8-functional-hybrid.cpp  problem8-functional.cpp  problem8-lambda.cpp  problem8-lambda.md  problem8.cpp  problem9.cpp  problemN.template.cpp
scala/: .gitignore  README.md  build.sbt  checksum.scala  euler.scala  learning.md  problem1.scala  problem10.scala  problem11.scala  problem12.scala  problem13.scala  problem14.scala  problem15.scala  problem16.scala  problem17.scala  problem18.scala  problem19.scala  problem2.scala  problem20.scala  problem21.scala  problem22.scala  problem23.scala  problem24.scala  problem3.scala  problem3a.scala  problem4.scala  problem5.scala  problem50.scala  problem6.scala  problem7.scala  problem8.scala  problem9.scala  problemN.template.scala  stockPrices.scala  sudoku-alpha.scala  sudoku.scala  tripleProducts.scala
